--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,56 @@
-version: 1
 accounts:
   - name: alice
-    coins: ["1000token", "100000000stake"]
-  - name: bob
-    coins: ["500token"]
+    mnemonic: "guard cream sadness conduct invite crumble clock pudding hole grit liar hotel maid produce squeeze return argue turtle know drive eight casino maze host"
+    coins: ["15500000000000usquad", "1000000000000000uatom"]
+  - name: bob 
+    mnemonic: "friend excite rough reopen cover wheel spoon convince island path clean monkey play snow number walnut pull lock shoot hurry dream divide concert discover"
+    coins: ["10000000000000usquad", "1000000000000000uatom"]
+  - name: steve
+    mnemonic: "fuel obscure melt april direct second usual hair leave hobby beef bacon solid drum used law mercy worry fat super must ritual bring faculty"
+    coins: ["100000000usquad"]
+  - name: joe
+    mnemonic: "diary behind allow lawn loop assault armor survey media toe rural mass skull way crater tobacco pair glare window soon lift pistol fitness annual"
+    coins: ["100000000usquad"]
 validator:
   name: alice
-  staked: "100000000stake"
+  staked: "500000000000usquad"
+genesis:
+  chain_id: "localnet"
+  app_state:
+    crisis:
+      constant_fee:
+        denom: "usquad"
+    mint:
+      params:
+        mint_denom: "usquad"
+    staking:
+      params:
+        bond_denom: "usquad"
+    gov:
+      deposit_params:
+        min_deposit:
+          - amount: "1"
+            denom: "usquad"
+    farming:
+      params:
+        private_plan_creation_fee:
+            denom: "usquad"
+    liquidity:
+      params:
+        pair_creation_fee:
+            denom: "usquad"
+        pool_creation_fee:
+            denom: "usquad"
+    liquidstaking:
+      params:
+        liquid_bond_denom: "busquad"
+    # claim:
+    #   airdrops:
+    #     - airdrop_id: "1"
+    #       source_address: "cosmos1zaavvzxez0elundtn32qnk9lkm8kmcszzsv80v" # alice (validator)
+    #       source_coins: ["5000000000000usquad"]
+    #       termination_address: "cosmos17xpfvakm2amg962yls6f84z3kell8c5lserqta"
+    #       start_time: "2022-02-01T00:00:00Z"
+    #       end_time: "2022-03-01T00:00:00Z"
+    #   claim_records:
+
