--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,16 @@
 accounts:
-  - name: alice
+  - name: alice # cosmos1zaavvzxez0elundtn32qnk9lkm8kmcszzsv80v
     mnemonic: "guard cream sadness conduct invite crumble clock pudding hole grit liar hotel maid produce squeeze return argue turtle know drive eight casino maze host"
-    coins: ["15500000000000usquad", "1000000000000000uatom"]
-  - name: bob 
+    coins: ["1500000000000usquad", "1000000000000000uatom"]
+  - name: bob # cosmos1mzgucqnfr2l8cj5apvdpllhzt4zeuh2cshz5xu
     mnemonic: "friend excite rough reopen cover wheel spoon convince island path clean monkey play snow number walnut pull lock shoot hurry dream divide concert discover"
-    coins: ["10000000000000usquad", "1000000000000000uatom"]
-  - name: steve
+    coins: ["1000000000000usquad", "1000000000000000uatom"]
+  - name: steve # cosmos185fflsvwrz0cx46w6qada7mdy92m6kx4gqx0ny
     mnemonic: "fuel obscure melt april direct second usual hair leave hobby beef bacon solid drum used law mercy worry fat super must ritual bring faculty"
-    coins: ["100000000usquad"]
-  - name: joe
+    coins: ["1000000000000usquad"]
+  - name: source # cosmos15rz2rwnlgr7nf6eauz52usezffwrxc0mz4pywr
     mnemonic: "diary behind allow lawn loop assault armor survey media toe rural mass skull way crater tobacco pair glare window soon lift pistol fitness annual"
-    coins: ["100000000usquad"]
+    coins: ["15000000000000airdrop"]
 validator:
   name: alice
   staked: "500000000000usquad"
@@ -44,13 +44,29 @@ genesis:
     liquidstaking:
       params:
         liquid_bond_denom: "busquad"
-    # claim:
-    #   airdrops:
-    #     - airdrop_id: "1"
-    #       source_address: "cosmos1zaavvzxez0elundtn32qnk9lkm8kmcszzsv80v" # alice (validator)
-    #       source_coins: ["5000000000000usquad"]
-    #       termination_address: "cosmos17xpfvakm2amg962yls6f84z3kell8c5lserqta"
-    #       start_time: "2022-02-01T00:00:00Z"
-    #       end_time: "2022-03-01T00:00:00Z"
-    #   claim_records:
-
+    claim:
+      airdrops:
+        - airdrop_id: "1"
+          source_address: "cosmos15rz2rwnlgr7nf6eauz52usezffwrxc0mz4pywr" # source
+          source_coins: 
+            - amount: "5000000000000"
+              denom: "airdrop"
+          termination_address: "cosmos17xpfvakm2amg962yls6f84z3kell8c5lserqta"
+          start_time: "2022-02-15T14:46:14.558744Z"
+          end_time: "2022-02-16T00:00:00Z"
+      claim_records:
+        - airdrop_id: "1"
+          recipient: "cosmos1zaavvzxez0elundtn32qnk9lkm8kmcszzsv80v"
+          initial_claimable_coins:
+            - amount: "3000000000000"
+              denom: "airdrop"
+          claimable_coins:
+            - amount: "3000000000000"
+              denom: "airdrop"
+          actions:
+            - action_type: "ACTION_TYPE_DEPOSIT"
+              claimed: false
+            - action_type: "ACTION_TYPE_SWAP"
+              claimed: false
+            - action_type: "ACTION_TYPE_FARMING"
+              claimed: false
