--- a/config.yml
+++ b/config.yml
@@ -49,8 +49,12 @@ genesis:
         - id: "1"
           source_address: "cosmos15rz2rwnlgr7nf6eauz52usezffwrxc0mz4pywr" # source
           termination_address: "cosmos17xpfvakm2amg962yls6f84z3kell8c5lserqta"
+          conditions:
+            - "CONDITION_TYPE_DEPOSIT"
+              "CONDITION_TYPE_SWAP"
+              "CONDITION_TYPE_FARMING"
           start_time: "2022-02-01T00:00:00Z"
-          end_time: "2022-02-21T00:00:00Z"
+          end_time: "2022-03-21T00:00:00Z"
       claim_records:
         - airdrop_id: "1"
           recipient: "cosmos1zaavvzxez0elundtn32qnk9lkm8kmcszzsv80v"
@@ -60,10 +64,4 @@ genesis:
           claimable_coins:
             - amount: "3000000000000"
               denom: "airdrop"
-          actions:
-            - action_type: "ACTION_TYPE_DEPOSIT"
-              claimed: false
-            - action_type: "ACTION_TYPE_SWAP"
-              claimed: false
-            - action_type: "ACTION_TYPE_FARMING"
-              claimed: false
+          claimed_conditions:
