chore: fix typo on swagger

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -25,7 +25,7 @@
       "operationIds": {
         "rename": {
           "Params": "LiquidityParams",
-          "Pool": "LiquidityParams"
+          "Pool": "LiquidityPool"
         }
       }
     },
