--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Crescent REST and gRPC Gateway docs",
     "description": "A REST interface for state queries, transactions",
-    "version": "1.0.0-rc1"
+    "version": "1.0.0"
   },
   "apis": [
     {
