feat: add marketmaker module (cherry-picked)

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -8,6 +8,8 @@
   - x/liquidstaking/**/*
 "x/mint":
   - x/mint/**/*
+"x/marketmaker":
+  - x/marketmaker/**/*
 "documentation":
   - docs/**/*
 "build":
