env: add liquidfarming

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,6 +6,8 @@
   - x/liquidity/**/*
 "x/liquidstaking":
   - x/liquidstaking/**/*
+"x/liquidfarming":
+  - x/liquidfarming/**/*
 "x/mint":
   - x/mint/**/*
 "documentation":
