--- a/config-test.yml
+++ b/config-test.yml
@@ -1,29 +1,55 @@
+version: 1
 init:
   home: "$HOME/.crescent"
 build:
   ldflags:
-    [
-      "-X github.com/crescent-network/crescent/v3/x/farming/keeper.enableAdvanceEpoch=true",
-    ]
+    - -X github.com/crescent-network/crescent/v3/x/farming/keeper.enableAdvanceEpoch=true
+    - -X github.com/crescent-network/crescent/v3/x/liquidfarming/keeper.enableAdvanceAuction=true
+  proto:
+    path: proto
+    third_party_paths:
+      - third_party/proto
+      - proto_vendor
 accounts:
   - name: alice # cre1zaavvzxez0elundtn32qnk9lkm8kmcszxclz6p
-    mnemonic: "guard cream sadness conduct invite crumble clock pudding hole grit liar hotel maid produce squeeze return argue turtle know drive eight casino maze host"
     coins:
-      ["1500000000000stake", "1000000000000000uatom", "1000000000000000uusd"]
+      - 1500000000000stake
+      - 1000000000000000uatom
+      - 1000000000000000uusd
+    mnemonic:
+      guard cream sadness conduct invite crumble clock pudding hole grit liar
+      hotel maid produce squeeze return argue turtle know drive eight casino maze host
   - name: bob # cre1mzgucqnfr2l8cj5apvdpllhzt4zeuh2c5l33n3
-    mnemonic: "friend excite rough reopen cover wheel spoon convince island path clean monkey play snow number walnut pull lock shoot hurry dream divide concert discover"
     coins:
-      ["1000000000000stake", "1000000000000000uatom", "1000000000000000uusd"]
+      - 1000000000000stake
+      - 1000000000000000uatom
+      - 1000000000000000uusd
+    mnemonic:
+      friend excite rough reopen cover wheel spoon convince island path clean
+      monkey play snow number walnut pull lock shoot hurry dream divide concert discover
   - name: steve # cre185fflsvwrz0cx46w6qada7mdy92m6kx4vg42xf
-    mnemonic: "fuel obscure melt april direct second usual hair leave hobby beef bacon solid drum used law mercy worry fat super must ritual bring faculty"
     coins:
-      ["1000000000000stake", "1000000000000000uatom", "1000000000000000uusd"]
+      - 1000000000000stake
+      - 1000000000000000uatom
+      - 1000000000000000uusd
+    mnemonic:
+      fuel obscure melt april direct second usual hair leave hobby beef bacon
+      solid drum used law mercy worry fat super must ritual bring faculty
   - name: source # cre15rz2rwnlgr7nf6eauz52usezffwrxc0mxajpmw
-    mnemonic: "diary behind allow lawn loop assault armor survey media toe rural mass skull way crater tobacco pair glare window soon lift pistol fitness annual"
-    coins: ["15000000000000airdrop"]
+    coins:
+      - 15000000000000airdrop
+    mnemonic:
+      diary behind allow lawn loop assault armor survey media toe rural mass
+      skull way crater tobacco pair glare window soon lift pistol fitness annual
 validator:
   name: alice
-  staked: "500000000000stake"
+  staked: 100000000stake
+faucet:
+  name: bob
+  coins:
+    - 10000000stake
+    - 10000000uatom
+  host: 0.0.0.0:4500
 genesis:
   chain_id: "localnet"
   app_state:
