--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # CODEOWNERS: https://help.github.com/articles/about-codeowners/
 
 # Primary repo maintainers
-*    @crypin @kingcre @queencre
+*    @crypin @kingcre @queencre @richard-bachman @lv-koala
