fix: rollback swagger version to 2 and add missing apis

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -1,5 +1,5 @@
 {
-  "swagger": "3.0",
+  "swagger": "2.0",
   "info": {
     "title": "Crescent REST and gRPC Gateway docs",
     "description": "A REST interface for state queries, transactions",
@@ -58,6 +58,28 @@
       "operationIds": {
         "rename": {
           "Params": "MarketMakerParams"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/crescent/lpfarm/v1beta1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "LPFarmParams",
+          "HistoricalRewards": "LPFarmHistoricalRewards",
+          "Plans": "LPFarmPlans",
+          "Plan": "LPFarmPlan",
+          "Position": "LPFarmPosition",
+          "Rewards": "LPFarmRewards"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/crescent/liquidfarming/v1beta1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "LiquidFarmingParams",
+          "Rewards": "LiquidFarmingRewards"
         }
       }
     }
