feat: scaffold exchange module

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -85,6 +85,14 @@
           "LastBlockTime": "MarkerLastBlockTime"
         }
       }
+    },
+    {
+      "url": "./tmp-swagger-gen/crescent/exchange/v1beta1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "ExchangeParams",
+        }
+      }
     }
   ]
 }
