feat: add fee params and validate some msgs (WIP)

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -93,6 +93,14 @@
           "Params": "ExchangeParams"
         }
       }
+    },
+    {
+      "url": "./tmp-swagger-gen/crescent/amm/v1beta1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "AMMParams"
+        }
+      }
     }
   ]
 }
