feat: implement grpc queries and validate msgs
also handle genesis state

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -98,7 +98,9 @@
       "url": "./tmp-swagger-gen/crescent/amm/v1beta1/query.swagger.json",
       "operationIds": {
         "rename": {
-          "Params": "AMMParams"
+          "Params": "AMMParams",
+          "Pools": "AMMPools",
+          "Positions": "AMMPositions",
         }
       }
     }
