--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -90,7 +90,8 @@
       "url": "./tmp-swagger-gen/crescent/exchange/v1beta1/query.swagger.json",
       "operationIds": {
         "rename": {
-          "Params": "ExchangeParams"
+          "Params": "ExchangeParams",
+          "Order": "ExchangeOrder",
         }
       }
     },
