fix: add x/liquidfarming protobuf files and fix swagger config

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -27,7 +27,7 @@
       "url": "./tmp-swagger-gen/tendermint/budget/v1beta1/query.swagger.json",
       "operationIds": {
         "rename": {
-          "Params": "BudgetParams",
+          "Params": "BudgetParams"
         }
       }
     },
@@ -81,7 +81,11 @@
       "operationIds": {
         "rename": {
           "Params": "LiquidFarmingParams",
-          "Rewards": "LiquidFarmingRewards"
+          "Rewards": "LiquidFarmingRewards",
+          "Bids": "LiquidFarmingBids",
+          "ExchangeRate": "LiquidFarmingExchangeRate",
+          "RewardsAuction": "LiquidFarmingRewardsAuction",
+          "RewardsAuctions": "LiquidFarmingRewardsAuctions"
         }
       }
     },
@@ -90,7 +94,11 @@
       "operationIds": {
         "rename": {
           "Params": "LiquidAMMParams",
-          "Rewards": "LiquidAMMRewards"
+          "Rewards": "LiquidAMMRewards",
+          "Bids": "LiquidAMMBids",
+          "ExchangeRate": "LiquidAMMExchangeRate",
+          "RewardsAuction": "LiquidAMMRewardsAuction",
+          "RewardsAuctions": "LiquidAMMRewardsAuctions"
         }
       }
     },
