ci: add labels for exchange and amm

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -20,6 +20,10 @@
   - x/marker/**/*
 "x/budget":
   - x/budget/**/*
+"x/exchange":
+  - x/exchange/**/*
+"x/amm":
+  - x/amm/**/*
 "documentation":
   - docs/**/*
 "build":
